# tpm-demo

./: .gitignore  CMakeLists.txt  README.md
include/tpm_encrypt/: common.hpp  data_decrypt.hpp  data_encrypt.hpp
src/: common.cpp  data_decrypt.cpp  data_encrypt.cpp  main.cpp
